# church_nepal

./: .env.example  .gitignore  ADMIN_PLAN.txt  API_DOCUMENTATION.md  ARCHITECTURE.md  Caddyfile  Caddyfile.backup  MODERNIZATION_COMPLETE.md  READINESS.md  README.md  ROADMAP.md  UI_AUDIT.md  add_rate_limits.py  auth.py  deploy.sh  docker-compose.yml  fix-marquee.txt  fix-marquee2.txt  fix-master.txt  fix-master2.txt  fix-master3.txt  fix-master4.txt  index.html  master-prod.txt  master.txt  nginx.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rerun_tasks.txt  server.py  site_settings.json  start-pg.bat  subscribers.json  tenant_isolation.rs  test_auth.py  users.json  utils.py  vault-sync.bat  vite.config.ts
backend/: Cargo.toml  Dockerfile  stderr2.txt
backend/migrations/: 001_init.sql  001_initial_schema.sql  001_initial_schema.sql.disabled  002_seed.sql  003_more_seed.sql  004_add_users_updated_at.sql  005_add_enabled_columns.sql  006_seed_content_blocks.sql  007_seed_footer.sql  008_seed_brand_social.sql  009_seed_all_sections.sql  010_seed_about.sql  011_create_donations.sql  012_add_donations_receipts.sql  012_create_todos.sql  013_create_missing_tables.sql  014_seed_visit.sql  015_seed_pastor.sql  016_create_groups.sql  017_leadership_content_blocks.sql  018_prayer_content_blocks.sql  019_ministries_content_blocks.sql  020_sermons_content_blocks.sql  021_events_content_blocks.sql  022_seed_live_blocks.sql  023_seed_terms_privacy_blocks.sql  024_add_about_cta.sql  025_seed_theme_defaults.sql  026_add_leaders_social_links.sql  027_create_contact_messages.sql  028_create_people_crm.sql  029_create_offerings.sql  030_all_remaining_features.sql  031_member_applications.sql  033_volunteers.sql  037_public_page_blocks.sql  038_rich_seed_data.sql  039_add_sermon_video_url.sql  040_pagination_indexes.sql  041_enhance_hero_seed.sql  (+16 more)
backend/src/: auth.rs  config.rs  db.rs  email.rs  error.rs  jobs.rs  main.rs  routes.rs  routes.rs.bak  tenant.rs
backend/src/handlers/: attendance.rs  audit.rs  auth.rs  blog.rs  blog.rs.bak  broadcasts.rs  campaigns.rs  contact_info.rs  contact_messages.rs  content_blocks.rs  dashboard.rs  donations.rs  event_rsvps.rs  events.rs  forms.rs  funds.rs  gallery.rs  groups.rs  leaders.rs  media.rs  member_applications.rs  members.rs  ministries.rs  mod.rs  newsletter.rs  notices.rs  offerings.rs  pagination_macros.rs  people.rs  pledges.rs  portfolio.rs  prayer_requests.rs  reports.rs  sermons.rs  service_times.rs  services.rs  settings.rs  storage.rs  team.rs  testimonies.rs  (+6 more)
backend/src/models/: attendance.rs  audit.rs  blog_post.rs  broadcast.rs  campaign.rs  contact_info.rs  contact_message.rs  content_block.rs  donation.rs  event.rs  event_rsvp.rs  form.rs  fund.rs  gallery.rs  group.rs  leader.rs  member.rs  member_application.rs  ministry.rs  mod.rs  newsletter.rs  notice.rs  notification.rs  offering.rs  pagination.rs  person.rs  pledge.rs  portfolio.rs  prayer_request.rs  sermon.rs  service.rs  service_time.rs  setting.rs  team_member.rs  testimony.rs  todo.rs  user.rs  verse.rs  volunteer.rs  webhook.rs
backend/src/payment/: esewa.rs  khalti.rs  mod.rs  stripe.rs
backend/src/security/: xss.rs
backend/tests/: smoke.http  smoke.rs
control-plane/backend/: .env.example  Cargo.toml  Cargo.toml.bak  Dockerfile
control-plane/backend/migrations/: 001_control.sql  002_control_schema.sql  003_plans_billing.sql  004_admins.sql  005_audit_log.sql  006_notifications.sql  007_settings_keys_church.sql  008_admins_invite.sql  008_password_reset.sql  011_blog.sql  (+9 more)
tools/tr-proxy/: Cargo.toml
(+826 files in other folders)
