[package]
name = "grace-church-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate", "sqlite"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
bcrypt = "0.17"
tower-http = { version = "0.6", features = ["cors", "fs"] }
dotenvy = "0.15"
anyhow = "1"
multer = "2"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
lettre = { version = "0.11", features = ["builder", "tokio1", "rustls-tls", "webpki-roots", "smtp-transport", "hostname"] }
image = "0.25"
validator = { version = "0.16", features = ["derive"] }
tower_governor = { version = "0.6" }
dashmap = "5"
sentry = { version = "0.48.5", features = ["tokio"] }
regex = "1"


[dev-dependencies]
mockall = "0.13"
mockall_macros = "0.13"
