[package]
name = "churchnepal-control-plane"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
mockall = "0.13"
mockall_macros = "0.13"
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate", "sqlite"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
bcrypt = "0.17"
tower-http = { version = "0.6", features = ["cors"] }
dotenvy = "0.15"
anyhow = "1"
rand = "0.8"
totp-rs = { version = "5", features = ["otpauth", "qr"] }
base32 = "0.5"
reqwest = { version = "0.12", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
lettre = { version = "0.11", features = ["builder", "tokio1", "rustls-tls", "webpki-roots", "smtp-transport", "hostname"] }

[dev-dependencies]
mockall = "0.13"
mockall_macros = "0.13"
