[package]
name = "tr-proxy"
version = "0.1.0"
edition = "2021"

# Tiny local reverse-proxy for TokenRouter.
# It sits in front of https://api.tokenrouter.com and injects the "skip thinking"
# flags into every chat-completion request, so reasoning models (e.g. GLM-5.2)
# answer instantly instead of writing long chains of thought. Point a tool's
# baseURL at http://127.0.0.1:8787/v1 and it behaves like TokenRouter, but fast.

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
serde_json = "1"

[profile.release]
opt-level = 1
